--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -155,7 +155,7 @@ html {
     width: 20px;
     height: 20px;
     margin-bottom: 5px;
-    background: url(../media/man-user-Gray.svg) 100% 100% no-repeat;
+    background: url(../media/routeGray.svg) 100% 100% no-repeat;
     background-size: contain;
 }
 
@@ -163,7 +163,7 @@ html {
     width: 20px;
     height: 20px;
     margin-bottom: 5px;
-    background: url(../media/man-user-Orange.svg) 100% 100% no-repeat;
+    background: url(../media/routeOrange.svg) 100% 100% no-repeat; 
     background-size: contain;
 }
 
