--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -1,3 +1,31 @@
+.homeRoutesList{
+    margin-top: 15px;
+    /* overflow-x: scroll;
+    overflow-y: hidden; */
+}
+
+/* ScrollBar Begin */
+/* 
+.homeRoutesList::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    background-color: #F5F5F5;
+}
+
+.homeRoutesList::-webkit-scrollbar {
+    height: 6px;
+    background-color: #F5F5F5;
+}
+
+.homeRoutesList::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #f60;
+} */
+
+
+/* ScrollBar end */
+
 .placesList_element {
     position: relative;
     display: flex;
