--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -38,6 +38,24 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.drivers_block_element .placesList_info_button{
+    cursor: pointer;
+    background: #304269;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    width: 100%;
+    height: 48px;
+    text-align: center;
+    line-height: 48px;
+    border-radius: 0px 0px 5px 5px;
+    transition: all 0.3s;
+}
+
+.drivers_block_element .placesList_info_button:hover{
+    background: #ff6600;
+}
+
 .block_element_right {
     width: 355px;
     padding-left: 25px;
@@ -105,7 +123,7 @@
 }
 @media (max-width: 440px){
     .driversBlock_carImage{
-        height: 200px;
+        height: 240px;
     } 
 }
 
@@ -228,7 +246,7 @@
 
 .driversBlock_buttonStyle {
     padding: 0;
-    height: 60px !important;
+    height: 48px !important;
     background: #304269;
     color: #fff;
     border: none;
