--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -217,7 +217,7 @@ h2.homeBottomTitle {
 
 .homeBottomNewText p {
     text-align: center;
-    width: 80%;
+    width: 93%;
     font-size: 16px;
     color: #333;
 }
@@ -237,7 +237,7 @@ h2.homeBottomTitle {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.homeBottomNewEl span {
+.homeBottomNewEl a span {
     background: #304269;
     width: 100%;
     display: block;
@@ -251,8 +251,11 @@ h2.homeBottomTitle {
     cursor: pointer;
 }
 
-.homeBottomNewEl span a{
+.homeBottomNewEl a:hover {
     color: #fff;
+    text-decoration: none !important;
+    outline: none;
+    
 }
 
 .homeBottomNewEl span:hover {
@@ -269,7 +272,7 @@ h2.homeBottomTitle {
     background-size: contain !important;
     background-position: center !important;
     width: 100%;
-    height: 100px;
+    height: 150px;
     margin: 0px auto;
     margin-bottom: 20px;
 }
@@ -320,7 +323,6 @@ h2.homeBottomTitle {
         position: relative;
         background-size: cover !important;
         background-position: center center !important;
-        min-height: 85vh;
         /* scroll-snap-align: start; */
     }
 
@@ -342,9 +344,6 @@ h2.homeBottomTitle {
 }
 
 @media (max-width: 576px) {
-    .home_window {
-        background: none;
-    }
 
     .home_block {
         padding: 0 !important;
