--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -30,8 +30,8 @@
 .mobailRoutMenuText {
     color: #fff;
     font-weight: 400;
+    text-align: center;
     font-size: 14px;
-    margin-top: -20px;
     padding-bottom: 25px;
 }
 
