--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,6 +34,13 @@ html {
 .footerButtonsIcon i {
     /* margin-left: 10px; */
     cursor: pointer;
+    display: block;
+}
+
+.footerButtonsIcon a{
+    position: relative;
+    width: max-content;
+    height: max-content;
 }
 
 .footerButtonUp {
