--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -55,16 +55,18 @@
 
 .commentBlock_createComment {
     position: relative;
-    width: 100%;
+    width: 99%;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     padding: 10px 7px;
+    margin: 5px auto;
     margin-bottom: 12px;
     border-radius: 5px;
+    transition: all 0.3s;
 }
 
 .commentBlock_createComment:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s;
+    /* box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3); */
+    
 }
 
 .commentBlock_comments.commentBlock_element {
