--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -291,6 +291,7 @@
 .driversBlock_driverCard_driverInfo {
     padding-left: 8px;
     padding-top: 4px;
+    max-width: 130px;
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
