--- a/src/components/TourDescription/TourDescription.css
+++ b/src/components/TourDescription/TourDescription.css
@@ -310,6 +310,13 @@
     .editTourHeaderBG{
         top:80%;
     }
+    .tourPanel_element:hover {
+        color: #304269;
+    }
+    .tourPanel_panel a:hover {
+        color: #304269;
+        text-decoration: none;
+    }
 }
 
 @media (max-width: 560px) {
