--- a/src/components/driverProfileRegistration/DriverProfileTripSettings.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettings.css
@@ -46,10 +46,10 @@
     color: #304269;
 }
 
-.h5lineHeight span{
+/* .h5lineHeight span{
     line-height: 1.2;
     margin-bottom: 5px;
-}
+} */
 /* Navigation page End */
 
 
