--- a/src/components/UserProfile/UserProfileTrevelHistory.css
+++ b/src/components/UserProfile/UserProfileTrevelHistory.css
@@ -2,6 +2,7 @@
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     padding-bottom: 0px;
+    justify-content: center;
     transition: all 0.3s;
 }
 
@@ -72,6 +73,29 @@
 .historyBodyBottomMultiUserEl{
     padding: 10px;
     border-bottom: 1px solid #ccc;
+}
+
+.historyBodyBottomMultiUserElLink{
+    margin-left: 10px;
+    padding: 5px;
+    background: #304269;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+    transition: all 0.3s;
+}
+
+.historyBodyBottomMultiUserElLink:hover{
+    color: #fff;
+    text-decoration: none;
+    background: #f60;
+}
+
+.historyBodyBottomMultiUserElText{
+    font-size: 14px;
+    color: #686868;
+    font-weight: 400;
+    padding-left: 5px;
 }
 
 .trevelHistoryBody .historyBodyBottomMultiUserEl h5{
@@ -179,7 +203,8 @@
     font-weight: 400;
     color: rgba(24, 153, 249);
     margin: 0;
-    margin-bottom: 5px;
+    line-height: normal;
+    /* margin-bottom: 5px; */
 }
 
 .historyBodyElementDriver {
