--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -5,6 +5,7 @@
     font-weight: 600;
     margin: 10px 0;
     padding: 5px;
+    padding-bottom: 1px;
     position: sticky;
     top: 0px;
     background: #fff;
