--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -1,4 +1,4 @@
-.homeRoutesList{
+.homeRoutesList {
     margin-top: 15px;
     /* overflow-x: scroll;
     overflow-y: hidden; */
@@ -41,15 +41,15 @@
     line-height: 20px;
     font-weight: 500;
     max-height: 42px;
-    /* min-height: 42px; */
+    min-height: 42px;
     text-overflow: ellipsis;
     overflow: hidden;
     color: #304269;
-    margin-top: 12px;
+    margin-top: 10px;
     /* text-transform: capitalize; */
 }
 
-.guideList_placeName{
+.guideList_placeName {
     font-size: 16px;
     line-height: 20px;
     font-weight: 500;
@@ -61,7 +61,7 @@
 
 }
 
-.guideList_tours{
+.guideList_tours {
     font-size: 14px;
     font-weight: 400;
     color: #304269;
@@ -77,17 +77,51 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 150px;
-    max-height: 175px;
+    /* min-height: 150px; */
+    max-height: 162px;
     padding: 0px 10px;
 }
 
+.routesPrices{
+    padding-top: 10px;
+}
+
+.routesPrices text {
+    font-size: 12px;
+    font-weight: 400;
+    color: #999;
+}
+
+.routesPrices .routesPricesSmall {
+    font-size: 12px;
+    font-weight: 400;
+    color: #999;
+    text-decoration: line-through;
+    line-height: 10px;
+}
+
+.routesPrices .routesPricesBig {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 500;
+    color: #f60;
+    line-height: 19px;
+}
+
+.routesPrices .routesPricesBig p{
+    font-size: 14px;
+    margin: 0px;
+    padding-right: 5px;
+}
+
 .routes_info {
-    height: 140px;
+    height: 100%;
 }
 
 .placesList_stars {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin-bottom: 5px;
 }
 
 .placesList_info_row {
@@ -121,6 +155,8 @@
 .placesList_info_position_loc {
     font-size: 13px;
     line-height: 16px;
+    padding-top: 10px;
+    padding-bottom: 0px;
 }
 
 .placesList_info_position_textStyle {
@@ -129,14 +165,16 @@
     /* white-space: nowrap; */
     overflow: hidden;
     color: #686868;
-    padding-left: 4px;
+    /* padding-left: 4px; */
 }
-.placesList_info_textCss{
+
+.placesList_info_textCss {
     color: #686868;
     font-size: 12px;
-    margin: 0px ;
+    margin: 0px;
 }
-.placesList_info_icons{
+
+.placesList_info_icons {
     display: block;
     width: 15px;
     height: 15px;
@@ -188,7 +226,7 @@
     align-items: flex-end;
 }
 
-.placesList_loading{
+.placesList_loading {
     width: 100%;
     background: url(../media/loadingBg.svg) no-repeat;
     background-size: 60% 60%;
