--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -26,6 +26,7 @@
     position: relative;
     align-items: center;
     /*width: 100%;*/
+    height: 100%;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     padding: 30px 20px;
     /* margin-bottom: 10px; */
@@ -108,7 +109,7 @@
 
 .driversBlock_carImage {
     position: relative;
-    height: 210px;
+    height: 155px;
     border-radius: 5px 5px 0 0;
     background-size: 100% 100% !important;
     background-repeat: no-repeat !important;
