--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -82,21 +82,40 @@
 }
 
 
-/* .createComment_element {
-    height: 33%;
-} */
+.createComment_element input{
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 2px 5px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #666;
+    max-width: 170px;
+    transition: all 0.3s;
+}
+
+.createComment_element input::placeholder{
+    font-size: 16px;
+    font-weight: 400;
+    color: #999;
+}
+
+.createComment_element input:focus{
+    outline: none;
+    border: 1px solid #999;
+}
+
 
 .createComment_picture img{
-    max-height: 60px;
-    min-height: 50px;
-    max-width: 60px;
-    min-width: 50px;
-    border-radius: 50%;
-}
-
-.createComment_picture img {
+    height: 90px !important;
+    width: 90px !important;
     object-fit: cover;
 }
+
+.createComment_picture label{
+    height: 90px !important;
+    width: 90px !important;
+}
+
 
 .createComment-text {
     font-size: 14px;
@@ -117,9 +136,26 @@
 .createComment_textareaStyle {
     width: 100%;
     height: 85px;
-    border-radius: 5px;
     margin: 15px 0;
-    padding: 5px;
+    border: 1px solid #fff;
+    background: #ccc;
+    border-radius: 5px;
+    padding: 2px 5px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    transition: all 0.3s;
+}
+
+.createComment_textareaStyle::placeholder{
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+}
+
+.createComment_textareaStyle:focus{
+    outline: none;
+    border: 1px solid #666;
 }
 
 a.createComment_Link {
@@ -139,9 +175,6 @@ a.createComment_Link:hover {
     background: #f60;
 }
 
-.createComment_textareaStyle::placeholder {
-    color: #cccccc;
-}
 
 .createComment_sendButton {
     width: 205px;
