--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -33,6 +33,11 @@
     border-color: #a5252580 !important;
     border-width: 2px!important;
 }
+
+.errorColor input{
+    border-color: #a5252580 !important;
+    color: #e81123!important;
+}
 .tourContent .imageLabelError {
     color: #e81123;
 }
