--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -370,6 +370,11 @@
     background-size: 20px 20px;
     background-position: center right 20px;
 }
+.burgerMenuBlock .drivers{
+    background: url(../media/wheel.svg)no-repeat;
+    background-size: 20px 20px;
+    background-position: center right 20px;
+}
 
 .burgerMenuBlock .timetable {
     background: url(../media/timetable.svg)no-repeat;
