--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -73,7 +73,6 @@
 .commentBlock_comments.commentBlock_element {
     position: relative;
     width: 100%;
-    cursor: pointer;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     /* padding: 12px 23px 0 23px; */
     margin-bottom: 12px;
@@ -261,10 +260,11 @@ a.createComment_Link:hover {
 } */
 
 .commentBlock_valueBlock {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     /* margin-left: 2%; */
     overflow: hidden;
+    
 }
 
 .news {
@@ -277,6 +277,9 @@ a.createComment_Link:hover {
     position: relative;
     text-overflow: ellipsis;
     width: 100%;
+    /* background: rgba(204, 204, 204, 0.3); */
+    padding: 5px 0px;
+    border-radius: 5px;
 }
 
 
