--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -272,7 +272,8 @@ a.createComment_Link:hover {
 }
 
 .news {
-    max-height: 145px;
+    max-height: 90px;
+    min-height: 90px;
     line-height: 21px;
     overflow: hidden;
     /* Обрезаем все, что не помещается в область */
