--- a/src/components/FooterPage/aboutService.css
+++ b/src/components/FooterPage/aboutService.css
@@ -43,6 +43,31 @@
     background-position: center !important;
 }
 
+.helpCard{
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    padding: 20px 0;
+}
+
+.helpCard h5{
+    color: #304269;
+    font-size: 22px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.helpCard a{
+    color: #999;
+    transition: all 0.3s;
+    padding-bottom: 5px;
+}
+
+.helpCard a:hover{
+    color: #f60;
+}
+
 @media (max-width: 800px) {
     .aboutService_Title {
         background: none !important;
