--- a/src/components/Tours/ToursListElement.css
+++ b/src/components/Tours/ToursListElement.css
@@ -165,3 +165,42 @@
     border-radius: 0px 0px 5px 0px;
     
 }
+
+.tourNameElementClass{
+    min-height: 21px;
+    margin-top: 0;
+    font-size: 18px;
+}
+
+.wideTourFlagBlock {
+    margin: auto 0;
+    height: 20px;
+    width: 80px;
+    font-size: 12px;
+    color: #fff;
+    border-radius: 5px;
+    margin: 5px 0;
+}
+
+.wideTourPrice{
+    margin-top: auto;
+    margin-left: auto;
+}
+
+.wideTourDataType{
+    min-width: 80px;
+    max-width: 80px;
+    padding-right: 5px;
+    overflow: hidden;
+    white-space: nowrap;
+    color: #686868;
+}
+
+.wideTourDriverLink a{
+    color: #304269;
+    text-decoration: underline;
+}
+
+.wideTourInfoStyle{
+    color: #999;
+}
