--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -107,6 +107,10 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.driversBlock_carImageHeigth {
+    max-height: 200px;
+    height: 200px;
+}
 .driversBlock_carImage {
     position: relative;
     height: 200px;
@@ -121,11 +125,19 @@
 
         height: 300px;
     }
+    .driversBlock_carImageHeigth{
+        max-height: 300px;
+        height: 300px;
+    }
 }
 @media (max-width: 440px){
     .driversBlock_carImage{
         height: 240px;
     } 
+    .driversBlock_carImageHeigth{
+        max-height: 240px;
+        height: 240px;
+    }
 }
 
 .driversBlock_carImage:hover .driversBlock_carBlackout {
